--- a/templates/camera.html
+++ b/templates/camera.html
@@ -4,6 +4,7 @@
     <title>Real-time Road Damage Detection</title>
   </head>
   <body>
+    <a href="">Post-Process</a>
     <h1>Real-time Road Damage Detection</h1>
     <img src="{{ url_for('video_feed') }}" />
   </body>
