--- a/templates/post_process.html
+++ b/templates/post_process.html
@@ -8,6 +8,6 @@
   <h1>Post Process</h1>
   <p>Post Processed</p>
   <p><a href="/">Back</a></p>
-  
+  <img src="{{ url_for('record_feed') }}" alt="">
 </body>
 </html>
