--- a/templates/display_frames.html
+++ b/templates/display_frames.html
@@ -9,15 +9,35 @@
         margin: 0;
         padding: 0;
       }
-      h1 {
+      .header {
         text-align: center;
-        color: #333;
+        color: #fff;
         padding: 20px;
       }
+      .header img {
+        margin-left: 1rem;
+        margin-right: 1rem;
+        height: 4rem;
+      }
+      .header .img-container {
+        display: flex;
+        justify-content: center;
+      }
+      .img-container {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        margin: auto;
+      }
+      h1 {
+        margin: 0;
+        font-size: 1.8rem;
+        color: #003975;
+        padding: 1rem;
+      }
       img {
-        display: block;
-        margin: 0 auto;
-        max-width: 80%;
+        margin: 1rem;
+        max-width: 30rem;
         height: auto;
       }
       p {
@@ -27,11 +47,19 @@
     </style>
 </head>
 <body>
-    <h1>Detected Frames</h1>
+  <div class="header">
+    <div class="img-container">
+      <img src="../static/assets/ichiro.png" alt="Ichiro Logo">
+      <img src="../static/assets/its.png" alt="ITS Logo">
+    </div>
+    <h1>ICHIRO | Road Damage Detector</h1>
+  </div>
     {% if frame_urls %}
+        <div class="img-container">
         {% for frame_url in frame_urls %}
-        <img src="{{ frame_url }}" alt="Detected Frame">
-        {% endfor %}
+          <img src="{{ frame_url }}" alt="Detected Frame">
+          {% endfor %}
+        </div>
     {% else %}
         <p>No frames were detected.</p>
     {% endif %}
